# CAR_SCOUT0

ros_ws/src/car_scout/src/: car_info.cpp  controler.cpp
ros_ws/src/carmarker/src/: carmarker_node.cpp
ros_ws/src/control_move/src/: control_move_node.cpp
ros_ws/src/show_information/src/: show_information_node.cpp
ugv_sdk/ugv_sdk/apps/: CMakeLists.txt
ugv_sdk/ugv_sdk/apps/move_demo/: move_demo.cpp
ugv_sdk/ugv_sdk/apps/scout_demo/: scout_demo.cpp
ugv_sdk/ugv_sdk/apps/show_demo/: show_demo.cpp
ugv_sdk/ugv_sdk/src/: hunter_base.cpp
